[378] Fix menu btn position on mobile

--- a/src/css/themes/btn.styl
+++ b/src/css/themes/btn.styl
@@ -12,6 +12,10 @@
   bottom: 18px
   font-size: 16px
   z-index: 2
+  @media screen and (max-width 767px)
+    margin: 18px;
+    bottom: 0;
+    right: 0;
 
 a
   color: $primary
